# clsarg

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test-python.yml
argparser/: __init__.py  argparser.py
clsarg/: __init__.py  clsarg.py
tests/: test_argparser.py
