[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 80

[tool.pyright]
typeCheckingMode = "basic"

reportIncompatibleMethodOverride = "error"
reportPrivateImportUsage = "information"
reportOptionalSubscript = "none"

pythonVersion = "3.8"
pythonPlatform = "Linux"
